Weitere Fehlermeldungen in Registrierung hinzugefügt. Übergabe von on:click-Handlern an zugrundeliegende Elemente.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Höhe der Navbar hat Einfluss auf die Positionierung der Attribution von Leaflet */
+.leaflet-control-attribution {
+	@apply bottom-16;
+}
